@@ -1,6 +1,6 @@
 Package: RTCGA
 Title: The Cancer Genome Atlas Data Integration
-Version: 1.2.1
+Version: 1.2.2
 Date: 2015-12-22
 Author: Marcin Kosinski <m.p.kosinski@gmail.com>, Przemyslaw Biecek
     <przemyslaw.biecek@gmail.com>
